--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,19 +1,16 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-500 dark:border-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a routerLink="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="assets/tledticssufv1kjov6bd0ek10d.png" class="h-8" alt="Flowbite Logo" />
+          <img src="assets/tledticssufv1kjov6bd0ek10d.png" class="h-8" alt="Smoking Course Logo" />
           <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Smoking Course</span>
       </a>
       <button (click)="toggleMenu()" data-collapse-toggle="navbar-multi-level" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-multi-level" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
-          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-          </svg>
       </button>
       <div [ngClass]="isHiddenMenu" class="w-full md:block md:w-auto" id="navbar-multi-level">
-        <ul class="flex flex-col font-medium p-10 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-700 dark:border-gray-700">
+        <ul class="flex flex-col font-medium py-3 px-8 md:py-2 md:px-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-700 dark:border-gray-700">
           <li>
-            <a routerLink="/" class="block py-2 px-3 font-bold text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent" aria-current="page">Home</a>
+            <a routerLink="/" [ngClass]="{'text-blue-700': this.router.url == '/'}" class="block py-2 px-3 font-bold text-white rounded md:bg-transparent md:p-0 md:dark:bg-transparent" aria-current="page">Home</a>
           </li>
           <li>
               <button (click)="toggleDropdown()" id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex font-bold items-center justify-between w-full py-2 px-3 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:hover:bg-gray-700 md:dark:hover:bg-transparent">Dropdown 
@@ -37,10 +34,10 @@
                       <div id="doubleDropdown" [ngClass]="isHiddenDoubleDropdown" class="z-10 bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
                           <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="doubleDropdownButton">
                             <li>
-                              <a routerLink="admin/create-video" class="block font-bold px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Create</a>
+                              <a routerLink="admin/create-video" [ngClass]="{'text-blue-700': this.router.url == 'admin/create-video'}" class="block font-bold px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Create</a>
                             </li>
                             <li>
-                              <a routerLink="admin/register-admin" class="block font-bold px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Register Admin</a>
+                              <a routerLink="admin/register-admin" [ngClass]="{'text-blue-700': this.router.url == 'admin/register-admin'}" class="block font-bold px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Register Admin</a>
                             </li>
                           </ul>
                       </div>
@@ -49,18 +46,16 @@
                       <a href="#" class="block font-bold px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
                     </li>
                   </ul>
-                  <div class="py-1">
-                    <a href="#" class="block font-bold px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
-                  </div>
+                  
               </div>
           </li>
           <li *ngIf="!this.authService.isLoggedIn()">
             <ul class="flex flex-row gap-5">
               <li>
-                <a routerLink="/login" class="block font-bold py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Login</a>
+                <a routerLink="/user/login" [ngClass]="{'text-blue-700': this.router.url == '/user/login'}" class="block font-bold py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Login</a>
               </li>
               <li>
-                <a routerLink="/register" class="block font-bold py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Register</a>
+                <a routerLink="/user/register" [ngClass]="{'text-blue-700': this.router.url == '/user/register'}" class="block font-bold py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Register</a>
               </li>
             </ul>
           </li>
