--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,6 +13,9 @@
             <a routerLink="/" [ngClass]="{'text-blue-700': this.router.url == '/'}" class="block py-2 px-3 font-bold text-white rounded md:bg-transparent md:p-0 md:dark:bg-transparent" aria-current="page">Home</a>
           </li>
           <li>
+            <a routerLink="/order" [ngClass]="{'text-blue-700': this.router.url == '/order'}" class="block py-2 px-3 font-bold text-white rounded md:bg-transparent md:p-0 md:dark:bg-transparent" aria-current="page">Order Course</a>
+          </li>
+          <li>
               <button (click)="toggleDropdown()" id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex font-bold items-center justify-between w-full py-2 px-3 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:hover:bg-gray-700 md:dark:hover:bg-transparent">Dropdown 
                 <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
@@ -22,8 +25,9 @@
               <div id="dropdownNavbar" [ngClass]="isHiddenDropdown" class="z-10 absolute font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
                   <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownLargeButton">
                     <li>
-                      <a href="#" class="block px-4 font-bold py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
+                      <a routerLink="videos" class="block px-4 font-bold py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
                     </li>
+                    
                     <li *ngIf="this.authService.getRole() == 'admin'" aria-labelledby="dropdownNavbarLink">
                       <button (click)="toggleDoubleDropdown()" id="doubleDropdownButton" data-dropdown-toggle="doubleDropdown" data-dropdown-placement="right-start" type="button" class="flex items-center justify-between w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
                         Dropdown
@@ -41,9 +45,6 @@
                             </li>
                           </ul>
                       </div>
-                    </li>
-                    <li>
-                      <a href="#" class="block font-bold px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
                     </li>
                   </ul>
                   
