adding redeeming code functionality

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,7 +13,7 @@
             <a routerLink="/" [ngClass]="{'text-blue-700': this.router.url == '/'}" class="block py-2 px-3 font-bold text-white rounded md:bg-transparent md:p-0 md:dark:bg-transparent" aria-current="page">Home</a>
           </li>
           <li>
-            <a routerLink="/order" [ngClass]="{'text-blue-700': this.router.url == '/order'}" class="block py-2 px-3 font-bold text-white rounded md:bg-transparent md:p-0 md:dark:bg-transparent" aria-current="page">Order Course</a>
+            <a routerLink="/orders/make-order" [ngClass]="{'text-blue-700': this.router.url == '/order'}" class="block py-2 px-3 font-bold text-white rounded md:bg-transparent md:p-0 md:dark:bg-transparent" aria-current="page">Order Course</a>
           </li>
           <li>
               <button (click)="toggleDropdown()" id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex font-bold items-center justify-between w-full py-2 px-3 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:hover:bg-gray-700 md:dark:hover:bg-transparent">Dropdown 
