--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -26,8 +26,11 @@
     <p *ngIf="control.errors?.['pattern'] && type == 'text'" class="text-red-600">
         Invalid phone number.
     </p>
-    <p *ngIf="control.errors?.['minLength']" class="text-red-600">
+    <p *ngIf="control.errors?.['minlength']" class="text-red-600">
         The value is too short.
+    </p>
+    <p *ngIf="control.errors?.['maxlength']" class="text-red-600">
+        The value is too long.
     </p>
     <p *ngIf="control.errors?.['min']" class="text-red-600">
         The value is too small.
