--- a/src/app/shared/loader/loader.component.html
+++ b/src/app/shared/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showLoader" class="w-full h-full fixed top-0 left-0 bg-white opacity-75 z-50">
+<div *ngIf="showLoader" class="w-full h-screen fixed top-0 left-0 bg-white opacity-75 z-50">
     <div class="flex justify-center items-center mt-[50vh]">
       <div class="fas fa-circle-notch fa-spin fa-5x text-blue-600"></div>
     </div>
