--- a/src/app/video-card/video-card.component.html
+++ b/src/app/video-card/video-card.component.html
@@ -1,6 +1,6 @@
 <div class="w-full rounded overflow-hidden shadow-lg">
   <a [routerLink]="['/','video', videoInfo?.id]">
-    <img class="w-full" [src]="videoInfo?.screenshotFileUrl" crossorigin [alt]="videoInfo?.title">
+    <img class="w-full h-52 object-contain" [src]="videoInfo?.screenshotFileUrl" crossorigin [alt]="videoInfo?.title">
     <div class="px-6 py-4">
       <div class="font-bold text-xl mb-2">{{videoInfo?.title}}</div>
       <p class="text-gray-700 text-base">
