--- a/src/app/video-page/video-page.component.html
+++ b/src/app/video-page/video-page.component.html
@@ -4,10 +4,10 @@
       <h1 class="font-bold mb-2 text-center text-3xl text-blue-800">{{ this.video?.title }}</h1>
 
       <!-- Video Editor -->
-      <div class="relative aspect-video mx-auto">
+      <div class="relative aspect-video xl:w-3/4 w-full mx-auto">
         <!-- Video Player -->
         <video controls #videoPlayer crossorigin
-          class="video-js vjs-theme-forest mx-auto w-full">
+          class="video-js vjs-theme-forest mx-auto vjs-fill">
         </video>
       </div>
 
