--- a/src/app/orders/order/order.component.html
+++ b/src/app/orders/order/order.component.html
@@ -1,99 +1,101 @@
-<div class="mx-auto my-5 max-w-3xl p-20 flex flex-row bg-slate-600 rounded-xl gap-10 items-center">
-    <ol class="relative text-gray-500 border-s border-gray-200 dark:border-gray-700 dark:text-gray-400">                  
-        <li class="mb-6 ms-6">            
-            <span class="absolute flex items-center justify-center w-8 h-8 bg-green-200 rounded-full -start-4 ring-4 ring-white dark:ring-gray-900 dark:bg-green-900">
-                <svg class="w-3.5 h-3.5 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
-                </svg>
-            </span>
-            <h3 class="font-medium leading-tight">Personal Info</h3>
-            <p class="text-sm">Step details here</p>
-        </li>
-        <li class="mb-6 ms-6">
-            <span *ngIf="!reviewStage" class="absolute flex items-center justify-center w-8 h-8 bg-gray-100 rounded-full -start-4 ring-4 ring-white dark:ring-gray-900 dark:bg-gray-700">
-                <svg class="w-3.5 h-3.5 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 16">
-                    <path d="M18 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2ZM6.5 3a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5ZM3.014 13.021l.157-.625A3.427 3.427 0 0 1 6.5 9.571a3.426 3.426 0 0 1 3.322 2.805l.159.622-6.967.023ZM16 12h-3a1 1 0 0 1 0-2h3a1 1 0 0 1 0 2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0 2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0 2Z"/>
-                </svg>
-            </span>
-            <span *ngIf="reviewStage" class="absolute flex items-center justify-center w-8 h-8 bg-green-200 rounded-full -start-4 ring-4 ring-white dark:ring-gray-900 dark:bg-green-900">
-                <svg class="w-3.5 h-3.5 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
-                </svg>
-            </span>
-            <h3 class="font-medium leading-tight">Confirmation</h3>
-            <p class="text-sm">Step details here</p>
-        </li>
-        <li class="ms-6">
-            <span *ngIf="!successStage" class="absolute flex items-center justify-center w-8 h-8 bg-gray-100 rounded-full -start-4 ring-4 ring-white dark:ring-gray-900 dark:bg-gray-700">
-                <svg class="w-3.5 h-3.5 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
-                    <path d="M16 1h-3.278A1.992 1.992 0 0 0 11 0H7a1.993 1.993 0 0 0-1.722 1H2a2 2 0 0 0-2 2v15a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2ZM7 2h4v3H7V2Zm5.7 8.289-3.975 3.857a1 1 0 0 1-1.393 0L5.3 12.182a1.002 1.002 0 1 1 1.4-1.436l1.328 1.289 3.28-3.181a1 1 0 1 1 1.392 1.435Z"/>
-                </svg>
-            </span>
-            <span *ngIf="successStage" class="absolute flex items-center justify-center w-8 h-8 bg-green-200 rounded-full -start-4 ring-4 ring-white dark:ring-gray-900 dark:bg-green-900">
-                <svg class="w-3.5 h-3.5 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
-                </svg>
-            </span>
-            <h3 class="font-medium leading-tight">Confirmation</h3>
-            <p class="text-sm">Step details here</p>
-        </li>
-    </ol>
-
-    <form [formGroup]="orderForm" (ngSubmit)="onNext()" *ngIf="!reviewStage">
-        <div class="grid gap-4 mb-4 sm:grid-cols-2">
+<div class="bg-beige min-h-[50vh] py-16">
+    <div class="mx-auto my-5 max-w-3xl p-20 flex flex-row bg-darker-green rounded-xl gap-10 items-center">
+        <ol class="relative text-darker-green border-s border-gray-200">                  
+            <li class="mb-6 ms-6">            
+                <span class="absolute flex items-center justify-center w-8 h-8 bg-green-200 rounded-full -start-4 ring-4 ring-white ">
+                    <svg class="w-3.5 h-3.5 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
+                    </svg>
+                </span>
+                <h3 class="font-medium leading-tight text-beige">Personal Info</h3>
+                <p class="text-sm text-beige">Step details here</p>
+            </li>
+            <li class="mb-6 ms-6">
+                <span *ngIf="!reviewStage" class="absolute flex items-center justify-center w-8 h-8 bg-beige rounded-full -start-4 ring-4 ring-white">
+                    <svg class="w-3.5 h-3.5 text-darker-green" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 16">
+                        <path d="M18 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2ZM6.5 3a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5ZM3.014 13.021l.157-.625A3.427 3.427 0 0 1 6.5 9.571a3.426 3.426 0 0 1 3.322 2.805l.159.622-6.967.023ZM16 12h-3a1 1 0 0 1 0-2h3a1 1 0 0 1 0 2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0 2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0 2Z"/>
+                    </svg>
+                </span>
+                <span *ngIf="reviewStage" class="absolute flex items-center justify-center w-8 h-8 bg-green-200 rounded-full -start-4 ring-4 ring-white ">
+                    <svg class="w-3.5 h-3.5 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
+                    </svg>
+                </span>
+                <h3 class="font-medium leading-tight text-beige">Confirmation</h3>
+                <p class="text-sm text-beige">Step details here</p>
+            </li>
+            <li class="ms-6">
+                <span *ngIf="!successStage" class="absolute flex items-center justify-center w-8 h-8 bg-beige rounded-full -start-4 ring-4 ring-white">
+                    <svg class="w-3.5 h-3.5 text-darker-green" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
+                        <path d="M16 1h-3.278A1.992 1.992 0 0 0 11 0H7a1.993 1.993 0 0 0-1.722 1H2a2 2 0 0 0-2 2v15a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2ZM7 2h4v3H7V2Zm5.7 8.289-3.975 3.857a1 1 0 0 1-1.393 0L5.3 12.182a1.002 1.002 0 1 1 1.4-1.436l1.328 1.289 3.28-3.181a1 1 0 1 1 1.392 1.435Z"/>
+                    </svg>
+                </span>
+                <span *ngIf="successStage" class="absolute flex items-center justify-center w-8 h-8 bg-green-200 rounded-full -start-4 ring-4 ring-white">
+                    <svg class="w-3.5 h-3.5 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
+                    </svg>
+                </span>
+                <h3 class="font-medium leading-tight text-beige">Confirmation</h3>
+                <p class="text-sm text-beige">Step details here</p>
+            </li>
+        </ol>
+    
+        <form [formGroup]="orderForm" (ngSubmit)="onNext()" *ngIf="!reviewStage">
+            <div class="grid gap-4 mb-4 sm:grid-cols-2">
+                <div>
+                    <label class="block mb-2 text-sm font-medium text-darker-blue">City</label>
+                    <app-input [control]="orderForm.controls.city" placeholder="Enter City" type="text"></app-input>
+                </div>
+                <div>
+                    <label class="block mb-2 text-sm font-medium text-darker-blue">Address</label>
+                    <app-input [control]="orderForm.controls.address" placeholder="Enter Address" type="text"></app-input>
+                </div>       
+            </div>
+            <button [disabled]="orderForm.invalid" class="text-darker-blue bg-lighter-green hover:bg-beige focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                Next
+            </button>
+        </form>
+    
+        <div class="w-full" *ngIf="reviewStage && !successStage">
             <div>
-                <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">City</label>
-                <app-input [control]="orderForm.controls.city" placeholder="Enter City" type="text"></app-input>
+                <label class="block mb-2 text-sm font-medium text-darker-blue">Username</label>
+                <p>{{this.userInfo?.name}}</p>
             </div>
             <div>
-                <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Address</label>
-                <app-input [control]="orderForm.controls.address" placeholder="Enter Address" type="text"></app-input>
-            </div>       
+                <label class="block mb-2 text-sm font-medium text-darker-blue">Email</label>
+                <p>{{this.userInfo?.email}}</p>
+            </div>
+            <div>
+                <label class="block mb-2 text-sm font-medium text-darker-blue">Age</label>
+                <p>{{this.userInfo?.age}}</p>
+            </div>
+            <div>
+                <label class="block mb-2 text-sm font-medium text-darker-blue">Phone Number</label>
+                <p>{{this.userInfo?.phone}}</p>
+            </div>
+            <div>
+                <label class="block mb-2 text-sm font-medium text-darker-blue">City</label>
+                <p>{{this.orderInfo?.city}}</p>
+            </div>
+            <div>
+                <label class="block mb-2 text-sm font-medium text-darker-blue">Address</label>
+                <p>{{this.orderInfo?.address}}</p>
+            </div>
+            <div class="w-full flex justify-between">
+                <button (click)="toggleStages()" class="text-white bg-lighter-green hover:bg-beige focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                    Back
+                </button>
+                <button (click)="onSubmit()" class="text-white bg-lighter-green hover:bg-beige focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                    Submit
+                </button>
+            </div>
         </div>
-        <button [disabled]="orderForm.invalid" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-            Next
-        </button>
-    </form>
-
-    <div class="w-full" *ngIf="reviewStage && !successStage">
-        <div>
-            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Username</label>
-            <p>{{this.userInfo?.name}}</p>
+    
+        <div class="w-full" *ngIf="successStage">
+            <div>
+                <p>Ayy congrats, bud!</p>
+            </div>
+            
         </div>
-        <div>
-            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
-            <p>{{this.userInfo?.email}}</p>
-        </div>
-        <div>
-            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Age</label>
-            <p>{{this.userInfo?.age}}</p>
-        </div>
-        <div>
-            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone Number</label>
-            <p>{{this.userInfo?.phoneNumber}}</p>
-        </div>
-        <div>
-            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">City</label>
-            <p>{{this.orderInfo?.city}}</p>
-        </div>
-        <div>
-            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Address</label>
-            <p>{{this.orderInfo?.address}}</p>
-        </div>
-        <div class="w-full flex justify-between">
-            <button (click)="toggleStages()" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                Back
-            </button>
-            <button (click)="onSubmit()" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                Submit
-            </button>
-        </div>
-    </div>
-
-    <div class="w-full" *ngIf="successStage">
-        <div>
-            <p>Ayy congrats, bud!</p>
-        </div>
-        
     </div>
 </div>
