--- a/src/app/orders/redeem-code/redeem-code.component.html
+++ b/src/app/orders/redeem-code/redeem-code.component.html
@@ -1,25 +1,27 @@
-<div class="w-full my-10 max-w-xs mx-auto">
-    <app-alert *ngIf="showAlert" [color]="alertColor">
-      {{  alertMsg  }}
-    </app-alert>
-    <form #codeForm="ngForm" (ngSubmit)="redeemCode()" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-        <div class="mb-4">
-          <label class="block text-gray-700 text-sm font-bold mb-2" for="code">
-            Activation Code
-          </label>
-          <input class="block w-full py-1.5 px-3 text-blue-600 border border-blue-900 transition duration-500 focus:outline-none rounded bg-transparent focus:border-deep-blue placeholder-deep-blue"
-                #code="ngModel"
-                type="text"
-                name="code"
-                [(ngModel)]="codeObject.code"
-                placeholder="Enter Code"
-                required
-            />
-        </div>
-        <div class="flex items-center justify-between">
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
-              Redeem Code
-            </button>       
-        </div>    
-    </form>
+<div class="w-full h-[52vh] py-[52px] bg-beige">
+  <div class="w-full my-10 max-w-xs mx-auto">
+      <app-alert *ngIf="showAlert" [color]="alertColor">
+        {{  alertMsg  }}
+      </app-alert>
+      <form #codeForm="ngForm" (ngSubmit)="redeemCode()" class="bg-lighter-green shadow-md rounded-3xl px-8 pt-6 pb-8 mb-4">
+          <div class="mb-4">
+            <label class="block text-darker-green text-sm font-bold mb-2" for="code">
+              Activation Code
+            </label>
+            <input class="block w-full py-1.5 px-3 text-darker-green border transition duration-500 focus:outline-none rounded-xl bg-lighter-green border-darker-green focus:border-beige"
+                  #code="ngModel"
+                  type="text"
+                  name="code"
+                  [(ngModel)]="codeObject.code"
+                  placeholder="Enter Code"
+                  required
+              />
+          </div>
+          <div class="flex items-center justify-between">
+              <button class="bg-darker-green hover:bg-beige text-darker-blue font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" type="submit">
+                Redeem Code
+              </button>       
+          </div>    
+      </form>
+  </div>
 </div>
