--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -2,7 +2,7 @@
     [formControl]="control"
     [placeholder]="placeholder"
     [type]="type"
-    class="block w-full py-1.5 px-3 text-blue-300 border border-blue-950 transition duration-500 focus:outline-none rounded bg-transparent focus:border-blue-800 placeholder-blue-500"
+    class="block w-full py-1.5 px-3 text-darker-green border transition duration-500 focus:outline-none rounded-xl bg-lighter-green border-darker-green focus:border-beige"
     [min]="min"
     [max]="max"
 />
