--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,39 +1,41 @@
-<div class="w-full my-10 max-w-xs mx-auto">
-  <app-alert *ngIf="showAlert" [color]="alertColor">
-    {{  alertMsg  }}
-  </app-alert>
-  <form #loginForm="ngForm" (ngSubmit)="login()" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-      <div class="mb-4">
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-          Username
-        </label>
-        <input class="block w-full py-1.5 px-3 text-blue-600 border border-blue-900 transition duration-500 focus:outline-none rounded bg-transparent focus:border-deep-blue placeholder-deep-blue"
-              #email="ngModel"
-              type="email"
-              name="email"
-              [(ngModel)]="credentials.email"
-              placeholder="Enter Email"
-              required
-            />
-      </div>
-      <div class="mb-6">
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-          Password
-        </label>
-        <input
-              #password="ngModel"
-              type="password"
-              name="password"
-              [(ngModel)]="credentials.password"
-              class="block w-full py-1.5 px-3 text-blue-600 border border-blue-900 transition duration-500 focus:outline-none rounded bg-transparent focus:border-deep-blue placeholder-deep-blue"
-              placeholder="Password"
-              required
-            />
-      </div>
-      <div class="flex items-center justify-between">
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
-          Log In
-        </button>       
-      </div>
-  </form>
+<div class="w-full h-[52vh] py-[52px] bg-beige">
+  <div class="w-full max-w-xs  mx-auto">
+    <app-alert *ngIf="showAlert" [color]="alertColor">
+      {{  alertMsg  }}
+    </app-alert>
+    <form #loginForm="ngForm" (ngSubmit)="login()" class="bg-lighter-green shadow-md rounded-3xl px-8 pt-6 pb-8 mb-4">
+        <div class="mb-4">
+          <label class="block text-darker-green text-sm font-bold mb-2" for="username">
+            Username
+          </label>
+          <input class="block w-full py-1.5 px-3 text-darker-green border transition duration-500 focus:outline-none rounded-xl bg-lighter-green border-darker-green focus:border-beige"
+                #email="ngModel"
+                type="email"
+                name="email"
+                [(ngModel)]="credentials.email"
+                placeholder="Enter Email"
+                required
+              />
+        </div>
+        <div class="mb-6">
+          <label class="block text-darker-green text-sm font-bold mb-2" for="password">
+            Password
+          </label>
+          <input
+                #password="ngModel"
+                type="password"
+                name="password"
+                [(ngModel)]="credentials.password"
+                class="block w-full py-1.5 px-3 text-darker-green border transition duration-500 focus:outline-none rounded-xl bg-lighter-green border-darker-green focus:border-beige"
+                placeholder="Password"
+                required
+              />
+        </div>
+        <div class="flex items-center justify-between">
+          <button class="bg-darker-green hover:bg-beige text-darker-blue font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" type="submit">
+            Log In
+          </button>       
+        </div>
+    </form>
+  </div>
 </div>
