--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-lighter-green h-[10vh]">
+<nav class="bg-lighter-green ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a routerLink="/" class="flex items-center space-x-3 rtl:space-x-reverse">
           <img src="assets/tledticssufv1kjov6bd0ek10d.png" class="h-8" alt="Smoking Course Logo" />
@@ -52,4 +52,10 @@
       </div>
     </div>
 </nav>
+<div class="bg-lighter-green">
+  <svg class="h-24 w-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
+    <path class="text-beige fill-current" fill-opacity="0.99"
+          d="M0,288L60,245.3C120,203,240,117,360,112C480,107,600,181,720,229.3C840,277,960,299,1080,256C1200,213,1320,107,1380,53.3L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+  </svg>
+</div>
   
