--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -5,8 +5,8 @@
     </app-alert>
     <form #loginForm="ngForm" (ngSubmit)="login()" class="bg-lighter-green shadow-md rounded-3xl px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
-          <label class="block text-darker-green text-sm font-bold mb-2" for="username">
-            Username
+          <label class="block text-darker-green text-sm font-bold mb-2" for="email">
+            Email
           </label>
           <input class="block w-full py-1.5 px-3 text-darker-green border transition duration-500 focus:outline-none rounded-xl bg-lighter-green border-darker-green focus:border-beige"
                 #email="ngModel"
