Visual changes and fixing the order tab. Other changes included.

--- a/src/app/orders/redeem-code/redeem-code.component.html
+++ b/src/app/orders/redeem-code/redeem-code.component.html
@@ -1,4 +1,5 @@
-<div class="w-full h-[52vh] py-[52px] bg-beige">
+<h1 class="text-center pt-10 text-6xl font-bold text-darker-green bg-beige">ВЪВЕДЕТЕ ВАШИЯТ <br> КОД ЗА АКТИВАЦИЯ</h1>
+<div class="w-full h-[40vh] py-[12px] bg-beige">
   <div class="w-full my-10 max-w-xs mx-auto">
       <app-alert *ngIf="showAlert" [color]="alertColor">
         {{  alertMsg  }}
