--- a/src/app/orders/order/order.component.html
+++ b/src/app/orders/order/order.component.html
@@ -1,45 +1,53 @@
 <div class="bg-beige min-h-[50vh] py-16">
-    <div class="mx-auto my-5 max-w-3xl p-20 flex flex-row bg-darker-green rounded-xl gap-10 items-center">
-        <ol class="relative text-darker-green border-s border-gray-200">                  
-            <li class="mb-6 ms-6">            
-                <span class="absolute flex items-center justify-center w-8 h-8 bg-green-200 rounded-full -start-4 ring-4 ring-white ">
-                    <svg class="w-3.5 h-3.5 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
+    <div class="mx-auto my-5 max-w-3xl py-20 pr-5 md:pr-6 pl-5 md:pl-20 flex flex-col md:flex-row bg-darker-green rounded-xl gap-8 items-center">
+        
+        <!-- RELATIVE SOLUTION -->
+        <ol class="relative text-darker-green max-h-[300px] md:border-l-2 md:border-t-0 border-t-2 border-l-0 flex flex-row md:flex-col gap-3 md:gap-8 border-beige">
+            <li class="flex flex-col md:flex-row gap-4 min-w-[110px] md:min-w-[150px] items-center relative md:-left-[18px] -top-4 md:-top-0">
+                <span class="flex items-center justify-center min-w-[32px] h-8 bg-green-200 rounded-full ring-4 ring-white">
+                    <svg class="w-4 h-4 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
                     </svg>
                 </span>
-                <h3 class="leading-tight font-bold text-darker-blue">Задаване на адрес</h3>
-                <p class="text-sm font-semibold text-darker-blue">Град и адрес</p>
+                <div class="text-center md:text-left">
+                    <h3 class="leading-tight font-bold text-darker-blue">Задаване на адрес</h3>
+                    <p class="text-sm font-semibold text-darker-blue">Град и адрес</p>
+                </div>
             </li>
-            <li class="mb-6 ms-6">
-                <span *ngIf="!reviewStage" class="absolute flex items-center justify-center w-8 h-8 bg-beige rounded-full -start-4 ring-4 ring-white">
-                    <svg class="w-3.5 h-3.5 text-darker-green" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 16">
-                        <path d="M18 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2ZM6.5 3a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5ZM3.014 13.021l.157-.625A3.427 3.427 0 0 1 6.5 9.571a3.426 3.426 0 0 1 3.322 2.805l.159.622-6.967.023ZM16 12h-3a1 1 0 0 1 0-2h3a1 1 0 0 1 0 2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0 2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0 2Z"/>
+            <li class="flex flex-col md:flex-row gap-4 min-w-[110px] md:min-w-[150px] items-center relative md:-left-[18px] -top-4 md:-top-0">
+                <span *ngIf="!reviewStage" class="flex items-center justify-center min-w-[32px] h-8 bg-beige rounded-full ring-4 ring-white">
+                    <svg class="w-4 h-4 text-darker-green" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 16">
+                        <path d="M18 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2ZM6.5 3a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5ZM3.014 13.021l.157-.625A3.427 3.427 0 0 1 6.5 9.571a3.426 3.426 0 0 1 3.322 2.805l.159.622-6.967.023ZM16 12h-3a1 1 0 0 1 0-2h3a1 1 0 0 1 0 2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0-2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0-2Z"/>
                     </svg>
                 </span>
-                <span *ngIf="reviewStage" class="absolute flex items-center justify-center w-8 h-8 bg-green-200 rounded-full -start-4 ring-4 ring-white ">
-                    <svg class="w-3.5 h-3.5 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
+                <span *ngIf="reviewStage" class="flex items-center justify-center w-[32px] h-8 bg-green-200 rounded-full ring-4 ring-white">
+                    <svg class="w-4 h-4 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
                     </svg>
                 </span>
-                <h3 [ngClass]="reviewStage ? 'text-darker-blue':'text-beige'" class="font-bold leading-tight">Потвърждение</h3>
-                <p [ngClass]="reviewStage ? 'text-darker-blue':'text-beige'" class="text-sm font-semibold">Обща информация</p>
-            </li>
-            <li class="ms-6">
-                <span *ngIf="!successStage" class="absolute flex items-center justify-center w-8 h-8 bg-beige rounded-full -start-4 ring-4 ring-white">
-                    <svg class="w-3.5 h-3.5 text-darker-green" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
+                <div class="text-center md:text-left">
+                    <h3 [ngClass]="reviewStage ? 'text-darker-blue':'text-beige'" class="font-bold leading-tight">Потвърждение</h3>
+                    <p [ngClass]="reviewStage ? 'text-darker-blue':'text-beige'" class="text-sm font-semibold">Обща информация</p>
+                </div>
+            </li>    
+            <li class="flex flex-col md:flex-row gap-4 min-w-[100px] md:min-w-[150px] items-center relative md:-left-[18px] -top-4 md:-top-0">
+                <span *ngIf="!successStage" class="flex items-center justify-center min-w-[32px] h-8 bg-beige rounded-full ring-4 ring-white">
+                    <svg class="w-4 h-4 text-darker-green" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
                         <path d="M16 1h-3.278A1.992 1.992 0 0 0 11 0H7a1.993 1.993 0 0 0-1.722 1H2a2 2 0 0 0-2 2v15a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2ZM7 2h4v3H7V2Zm5.7 8.289-3.975 3.857a1 1 0 0 1-1.393 0L5.3 12.182a1.002 1.002 0 1 1 1.4-1.436l1.328 1.289 3.28-3.181a1 1 0 1 1 1.392 1.435Z"/>
                     </svg>
                 </span>
-                <span *ngIf="successStage" class="absolute flex items-center justify-center w-8 h-8 bg-green-200 rounded-full -start-4 ring-4 ring-white">
-                    <svg class="w-3.5 h-3.5 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
+                <span *ngIf="successStage" class="flex items-center justify-center min-w-[32px] h-8 bg-green-200 rounded-full ring-4 ring-white">
+                    <svg class="w-4 h-4 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
                     </svg>
                 </span>
-                <h3 [ngClass]="reviewStage ? 'text-darker-blue':'text-beige'" class="font-medium leading-tight">Завършване</h3>
-                <p [ngClass]="reviewStage ? 'text-darker-blue':'text-beige'" class="text-sm">При успешно направена поръчка</p>
+                <div class="text-center md:text-left">
+                    <h3 [ngClass]="successStage ? 'text-darker-blue':'text-beige'" class="font-bold leading-tight">Завършване</h3>
+                    <p [ngClass]="successStage ? 'text-darker-blue':'text-beige'" class="text-sm font-semibold">При успешно направена поръчка</p>
+                </div>
             </li>
         </ol>
-    
+
         <form [formGroup]="orderForm" (ngSubmit)="onNext()" *ngIf="!reviewStage">
             <div class="grid gap-4 mb-4 sm:grid-cols-2">
                 <div>
@@ -56,68 +64,59 @@
             </button>
         </form>
     
-        <div class="w-full rounded-md overflow-hidden" *ngIf="reviewStage && !successStage">
+        <div *ngIf="reviewStage && !successStage" class="w-full md:w-3/5">
             <div class="mb-1 flex justify-between">
-                <div class="flex justify-center bg-lighter-green w-[45%]">
-                    <label class="text-sm text-darker-blue">Username</label>
+                <div class="flex justify-center rounded-lg bg-lighter-green w-[45%]">
+                    <label class="text-lg text-darker-blue text-center">Име на получател</label>
                 </div>
-                <p class="text-lighter-green">:</p>
-                <div class="flex justify-center bg-lighter-green w-[45%]">
+                <p class="text-lighter-green">-</p>
+                <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
                     <p>{{this.userInfo?.name}}</p>
                 </div>
             </div>
             <div class="mb-1 flex justify-between">
-                <div class="flex justify-center bg-lighter-green w-[45%]">
-                    <label class="text-sm text-darker-blue">Email</label>
+                <div class="flex justify-center rounded-lg bg-lighter-green w-[45%]">
+                    <label class="text-lg text-darker-blue text-center">Email</label>
                 </div>
-                <p class="text-lighter-green">:</p>
-                <div class="flex justify-center bg-lighter-green w-[45%]">
+                <p class="text-lighter-green">-</p>
+                <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
                     <p>{{this.userInfo?.email}}</p>
                 </div>
             </div>
             <div class="mb-1 flex justify-between">
-                <div class="flex justify-center bg-lighter-green w-[45%]">
-                    <label class="text-sm text-darker-blue">Age</label>
+                <div class="flex justify-center rounded-lg bg-lighter-green w-[45%]">
+                    <label class="text-lg text-darker-blue text-center">Телефонен Номер</label>
                 </div>
-                <p class="text-lighter-green">:</p>
-                <div class="flex justify-center bg-lighter-green w-[45%]">
-                    <p>{{this.userInfo?.age}}</p>
-                </div>
-            </div>
-            <div class="mb-1 flex justify-between">
-                <div class="flex justify-center bg-lighter-green w-[45%]">
-                    <label class="text-sm text-darker-blue">Phone Number</label>
-                </div>
-                <p class="text-lighter-green">:</p>
-                <div class="flex justify-center bg-lighter-green w-[45%]">
+                <p class="text-lighter-green">-</p>
+                <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
                     <p>{{this.userInfo?.phone}}</p>
                 </div>
             </div>
             <div class="mb-1 flex justify-between">
-                <div class="flex justify-center bg-lighter-green w-[45%]">
-                    <label class="text-sm text-darker-blue">City</label>
+                <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
+                    <label class="text-lg text-darker-blue text-center">Град</label>
                 </div>
-                <p class="text-lighter-green">:</p>
-                <div class="flex justify-center bg-lighter-green w-[45%]">
+                <p class="text-lighter-green">-</p>
+                <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
                     <p>{{this.orderInfo?.city}}</p>
                 </div>
             </div>
             <div class="mb-1 flex justify-between">
-                <div class="flex justify-center bg-lighter-green w-[45%]">
-                    <label class="text-sm text-darker-blue">Address</label>
+                <div class="flex justify-center rounded-lg items-center bg-lighter-green w-[45%] text-center">
+                    <label class="text-lg text-darker-blue text-center">Адрес</label>
                 </div>
-                <p class="text-lighter-green">:</p>
-                <div class="flex justify-center bg-lighter-green w-[45%]">
+                <p class="text-lighter-green">-</p>
+                <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] overflow-y-auto break-words text-center">
                     <p>{{this.orderInfo?.address}}</p>
                 </div>
             </div>
             <div class="w-full flex justify-around gap-3">
-                <button (click)="onSubmit()" class="bg-lighter-green text-darker-green hover:bg-beige hover:text-darker-blue min-w-[200px] focus:ring-4 focus:outline-none font-medium rounded-lg py-2.5 flex justify-center">
+                <button (click)="onBack()" class="bg-lighter-green text-darker-green hover:bg-beige hover:text-darker-blue min-w-[100px] md:min-w-[200px] focus:ring-4 focus:outline-none font-medium rounded-lg py-2.5 flex justify-center">
                     <div class="text-sm font-bold">
                         Назад
                     </div>
                 </button>
-                <button (click)="onSubmit()" class="bg-lighter-green text-darker-green hover:bg-beige hover:text-darker-blue min-w-[200px] focus:ring-4 focus:outline-none font-medium rounded-lg py-2.5 flex justify-center">
+                <button (click)="onSubmit()" class="bg-lighter-green text-darker-green hover:bg-beige hover:text-darker-blue min-w-[100px] md:min-w-[200px] focus:ring-4 focus:outline-none font-medium rounded-lg py-2.5 flex justify-center">
                     <div class="text-sm font-bold">
                         Поръчай
                     </div>
@@ -126,8 +125,12 @@
         </div>
     
         <div class="w-full" *ngIf="successStage">
-            <div>
-                <p>Ayy congrats, bud!</p>
+            <div class="rounded-xl bg-lighter-green p-10">
+                <h2 class="font-bold text-darker-green text-2xl text-center">БЛАГОДАРИМ ВИ, ЧЕ ПОРЪЧАХТЕ НАШИЯТ КУРС!</h2>
+                <p class="font-semibold text-darker-blue text-base text-center">МОЖЕ ДА ОЧАКВАТЕ ПРАТКА, СЪДЪРЖАЩА КОД ЗА АКТИВАЦИЯ И ПОДАРЪЦИ НА ПОДАДЕНИЯТ ОТ ВАС АДРЕС. МОЖЕТЕ ДА АКТИВИРАТЕ ВАШИЯТ КОД В СТРАНИЦАТА ЗА АКТИВАЦИЯ.</p>
+                <div class="w-[100px] h-[100px] mx-auto">
+                    <img src="assets/Success Logo.png" class="object-cover w-full h-full" alt="Smoking Course Logo" />
+                </div>
             </div>
             
         </div>
