--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Podkova:wght@400..800&display=swap');
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: 'Podkova';
+} 
