--- a/src/app/videos/video-page/video-page.component.html
+++ b/src/app/videos/video-page/video-page.component.html
@@ -1,11 +1,27 @@
 <div class="bg-beige w-full py-16 min-h-screen xl:px-8 px-4">
-    <div class="gap-5 flex lg:flex-row flex-col lg:m-0 sm:mx-5 align-middle lg:justify-center">
-        <div class="lg:w-10/12 w-full">
-            <div class="md:max-w-7xl md:h-[70vh] w-full rounded-xl bg-darker-green">
+    <div class="md:gap-5 flex lg:flex-row flex-col lg:m-0 sm:mx-5 align-middle lg:justify-center">
+        <div [ngClass]="{'lg:w-full': !previousVideo && !nextVideo}" class="lg:w-10/12 w-full">
+            <div class="lg:max-w-[70vw] mx-auto aspect-video w-full rounded-xl bg-darker-green">
                 Yo
             </div>
-            <h1 class="text-darker-blue text-2xl w-4/5 mx-auto my-5 font-extrabold">{{videoDataObj?.title}}</h1>
-            <div class="bg-lighter-green rounded w-4/5 mx-auto my-5">
+            <div class="flex justify-between w-full my-5 px-3 lg:max-w-[70vw] mx-auto">
+                <h1 class="text-darker-blue text-2xl font-extrabold align-middle">{{videoDataObj?.title}}</h1>
+                <div class="flex flex-row">
+                    <p class="text-darker-green text-xl font-bold mr-2 text-center hidden sm:inline">Добави към любими</p>
+                    <button (click)="toggleFavourite($event)" class="pb-4">
+                        <svg *ngIf="(!isFavourite && !loadingFavourite)" class="duration-100 hover:-translate-y-2 text-center" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#41B06E" stroke-width="1.5" width="30" height="30" viewBox="0 0 20.923 20">
+                          <path data-name="Path 1905" d="m334.737 27.228 2.306 4.672a.431.431 0 0 0 .324.235l5.156.749a.43.43 0 0 1 .238.734l-3.731 3.636a.43.43 0 0 0-.124.381l.881 5.135a.43.43 0 0 1-.624.453l-4.612-2.423a.43.43 0 0 0-.4 0l-4.611 2.424a.43.43 0 0 1-.624-.453l.881-5.135a.43.43 0 0 0-.124-.381l-3.731-3.636a.43.43 0 0 1 .238-.734l5.156-.749a.43.43 0 0 0 .324-.235l2.306-4.672a.43.43 0 0 1 .771-.001z" transform="translate(-325.303 -26.488)"></path>
+                        </svg>
+                        <svg *ngIf="(isFavourite && !loadingFavourite)" class="duration-100 hover:-translate-y-2 text-center" xmlns="http://www.w3.org/2000/svg" fill="#fcc822" stroke="#fcc822" stroke-width="1.5" width="30" height="30" viewBox="0 0 20.923 20">
+                          <path data-name="Path 1905" d="m334.737 27.228 2.306 4.672a.431.431 0 0 0 .324.235l5.156.749a.43.43 0 0 1 .238.734l-3.731 3.636a.43.43 0 0 0-.124.381l.881 5.135a.43.43 0 0 1-.624.453l-4.612-2.423a.43.43 0 0 0-.4 0l-4.611 2.424a.43.43 0 0 1-.624-.453l.881-5.135a.43.43 0 0 0-.124-.381l-3.731-3.636a.43.43 0 0 1 .238-.734l5.156-.749a.43.43 0 0 0 .324-.235l2.306-4.672a.43.43 0 0 1 .771-.001z" transform="translate(-325.303 -26.488)"></path>
+                        </svg>
+                        <div *ngIf="loadingFavourite" class="w-[30px] h-[30px]">
+                          <div class="fas fa-circle-notch fa-spin text-center fa-2x text-darker-green"></div>
+                        </div>
+                    </button>
+                </div>
+            </div>
+            <div class="rounded w-full my-5 text-darker-blue px-6 lg:max-w-[70vw] mx-auto">
                 <p>{{videoDataObj?.description}}</p>
             </div>
         </div>
